test/fail/enums_and_variants/scoped_variant_direct.lily
#[
SyntaxError: One has not been declared.
    from scoped_variant_direct.lily:11:
]#

scoped enum Test[A] {
    One(A),
    Two
}

var opt: Test[Integer] = One(10)
